# easy-equities-client

./: .replit  README.md  pyproject.toml
.agents/memory/: MEMORY.md  ee-api-architecture.md
app/: app.py
app/static/: style.css
app/templates/: base.html  categories.html  dashboard.html  holdings.html  instrument_detail.html  instruments.html  login.html  transactions.html
src/easy_equities_client/: __init__.py  clients.py  constants.py
src/easy_equities_client/accounts/: clients.py
src/easy_equities_client/instruments/: clients.py  types.py
src/easy_equities_client/orders/: __init__.py  clients.py  types.py
tests/: conftest.py
