[project]
name = "easy-equities-client"
version = "1.2.0"
description = "Unofficial Easy Equities and Satrix Python Client"

license = "MIT"
readme = "README.md"
homepage = "https://github.com/deanmalan/easy-equities-client"
repository = "https://github.com/deanmalan/easy-equities-client"

keywords = ["easyequities", "satrix", "money"]

classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.13',
]

requires-python = ">=3.13"

dependencies = [
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "lxml>=6.0.2",
    "mypy>=1.19.1",
    "playwright>=1.60.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "requests>=2.32.5",
    "requests-mock>=1.12.1",
    "ruff>=0.15.5",
]

[dependency-groups]
dev = [
    "lxml>=6.0.2",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "requests-mock>=1.12.1",
    "ruff>=0.15.5",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
