[project]
name = "pyeasyequities"
version = "2.0.0"
description = "Unofficial Easy Equities and Satrix Python Client"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["easyequities", "satrix", "investing", "stocks", "etf"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "yfinance>=0.2.0",
    "pandas>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/deanmalan/easy-equities-client"
Repository = "https://github.com/deanmalan/easy-equities-client"
"Bug Tracker" = "https://github.com/deanmalan/easy-equities-client/issues"

[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "requests-mock>=1.10.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/easy_equities_client"]

[tool.hatch.build]
exclude = [
    ".pythonlibs/*",
    ".cache/*",
    ".local/*",
    ".agents/*",
    "app/*",
    "*.egg-info",
]
